# blazing-microservice

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  decisions.md  docker-compose.yaml  pyproject.toml
app/: dependencies.py  main.py  worker.py
app/api/: routes.py
app/core/: config.py  security.py
app/db/: session.py
app/exceptions/: handler.py
app/models/: event.py
app/schemas/: event.py
app/services/: events_service.py
app/tasks/: fetch_events.py
scripts/: wait_for_db.py
tests/: conftest.py  test_api.py  test_services.py  test_tasks.py
tests/unit/: test_api.py  test_services.py  test_tasks.py
