[tool.poetry]
name = "events-provider"
version = "0.1.0"
description = "Serve events from a new event provider"
authors = ["Diego <dtellez95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
